# SentYa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md
include/: callback.h  globals.h
src/: callback.cpp  main.cpp
